emballage fonction Exercice_pratique de 1 à 5

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -5,17 +5,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°01 :"
+    "# Sujet n°01 :\n",
+    "### Difficulté : 2/5 & 3/5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1\n",
-    "def verifie(tab):\n",
+    "def verifie(tab:list):\n",
+    "    '''\n",
+    "    • Paramètre :\n",
+    "    - tab : un tableau de valeurs numériques non vide\n",
+    "    • Renvoie :\n",
+    "    - True si ce tableau est trié dans l’ordre croissant, False sinon\n",
+    "    • Exemples :\n",
+    "    - verifie([0, 5, 8, 8, 9])\n",
+    "    > True\n",
+    "    - verifie([8, 12, 4])\n",
+    "    > False\n",
+    "    '''\n",
+    "    assert tab == list(tab), \"tab doit être un tableau sous la form d'une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
     "    trier = True\n",
     "    for i in range(len(tab)-1):\n",
     "        if tab[i] <= tab[i+1]:\n",
@@ -57,7 +71,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°02 :"
+    "# Sujet n°02 :\n",
+    "### Difficulté : 1/5 & 2/5"
    ]
   },
   {
@@ -67,7 +82,18 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def indices_maxi(tab):\n",
+    "def indices_maxi(tab:list):\n",
+    "    '''\n",
+    "    • Paramètre :\n",
+    "    - tab : une liste tab non vide de nombres entiers\n",
+    "    • Renvoie :\n",
+    "    - Un couple donnant d’une part le plus grand élément de cette liste et d’autre part la liste des indices de la liste tab où apparaît ce plus grand élément\n",
+    "    • Exemple :\n",
+    "    - indices_maxi([1, 5, 6, 9, 1, 2, 3, 7, 9, 8])\n",
+    "    > (9, [3, 8])\n",
+    "    '''\n",
+    "    assert tab == list(tab), \"tab doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
     "    indices = []\n",
     "    maxi = tab[0]\n",
     "    for i in range(len(tab)):\n",
@@ -104,7 +130,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°3 :"
+    "# Sujet n°3 :\n",
+    "### Difficulté : 2/5 & 3/5"
    ]
   },
   {
@@ -115,6 +142,19 @@
    "source": [
     "#1\n",
     "def moyenne(liste):\n",
+    "    '''\n",
+    "    • Paramètre :\n",
+    "    - liste : une liste non vide de tuples à deux éléments de la forme (valeur, coefficient) où valeur et coefficient sont des nombres positifs ou nuls\n",
+    "    • Renvoie :\n",
+    "    - None si la somme des coefficients est nulle, la moyenne des valeurs affectées de leur coefficient sous forme de flottant sinon\n",
+    "    • Exemples :\n",
+    "    - moyenne([(8, 2), (12, 0), (13.5, 1), (5, 0.5)])\n",
+    "    > 9.142857142857142\n",
+    "    - moyenne([(3, 0), (5, 0)])\n",
+    "    > None\n",
+    "    '''\n",
+    "    assert liste == list(liste), \"Liste doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
     "    valeur = 0\n",
     "    coeff = 0\n",
     "    total = 0\n",
@@ -175,7 +215,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°4 :"
+    "# Sujet n°4 :\n",
+    "### Difficulté : 1/5 & 4/5"
    ]
   },
   {
@@ -186,6 +227,17 @@
    "source": [
     "#1 \n",
     "def a_doublon(liste):\n",
+    "    '''\n",
+    "    • Paramètre :\n",
+    "    - liste : une liste triée de nombres\n",
+    "    • Renvoie :\n",
+    "    - True si la liste contient au moins deux nombres identiques, False sinon\n",
+    "    • Exemple :\n",
+    "    - a_doublon([1, 2, 4, 6, 6])\n",
+    "    > True\n",
+    "    '''\n",
+    "    assert liste == list(liste), \"Liste doit être une list Python\"\n",
+    "    assert len(liste) != 0, \"La liste ne doit pas être vide\"\n",
     "    doublon = False\n",
     "    for i in range(len(liste)-1):\n",
     "        if liste[i] == liste[i+1]:\n",
@@ -239,7 +291,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°5 :"
+    "# Sujet n°5 :\n",
+    "### Difficulté : 1/5 & 2/5"
    ]
   },
   {
@@ -252,14 +305,35 @@
     "from random import randint\n",
     "\n",
     "def lancer(n):\n",
+    "    '''\n",
+    "    • Paramètre :\n",
+    "    - n : un entier positif\n",
+    "    • Renvoie :\n",
+    "    - Un tableau de type list de n entiers obtenus aléatoirement entre 1 et 6 (1 et 6 inclus) \n",
+    "    • Exemple :\n",
+    "    - lancer(5)\n",
+    "    > [5, 6, 6, 2, 2]\n",
+    "    '''\n",
+    "    assert n == int(n), \"n doit être un nombre entier\"\n",
     "    resultat = []\n",
     "    for i in range(n):\n",
     "        resultat.append(randint(1, 6))\n",
     "    return resultat\n",
     "\n",
-    "def paire_6(liste):\n",
+    "def paire_6(tab):\n",
+    "    '''\n",
+    "    • Paramètre :\n",
+    "    - tab : un tableau de type list de n entiers entre 1 et 6\n",
+    "    • Renvoie :\n",
+    "    -  True si le nombre de 6 est supérieur ou égal à 2, False sinon\n",
+    "    • Exemple :\n",
+    "    - paire_6([5, 6, 6, 2, 2])\n",
+    "    > True\n",
+    "    '''\n",
+    "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
     "    total_6 = 0\n",
-    "    for i in liste:\n",
+    "    for i in tab:\n",
     "        if i == 6:\n",
     "            total_6 += 1\n",
     "    if total_6 >= 2:\n",
@@ -318,22 +392,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°6 :"
+    "# Sujet n°6 :\n",
+    "### Difficulté : 1/5 & 1/5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1\n",
     "def recherche(tab, n):\n",
     "    indice_max = 0\n",
-    "    for i in range(len(tab)):\n",
-    "        if tab[i] == n:\n",
-    "            indice_max = i\n",
     "    if n in tab:\n",
+    "        for i in range(len(tab)):\n",
+    "            if tab[i] == n:\n",
+    "                indice_max = i\n",
     "        return indice_max\n",
     "    else:\n",
     "        return len(tab)"
@@ -368,7 +443,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°7 :"
+    "# Sujet n°7 :\n",
+    "### Difficulté : 2/5 & 3/5"
    ]
   },
   {
@@ -415,7 +491,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°08 :"
+    "# Sujet n°08 :\n",
+    "### Difficulté : 1/5 & 2/5"
    ]
   },
   {
@@ -488,7 +565,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°09 :"
+    "# Sujet n°09 :\n",
+    "### Difficulté : 3/5 & 4/5"
    ]
   },
   {
@@ -541,7 +619,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sujet n°10 :"
+    "# Sujet n°10 :\n",
+    "### Difficulté : 1/5 & 2/5"
    ]
   },
   {
@@ -635,7 +714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1\n",
+    "#1 \n",
     "def convertir(tab):\n",
     "    \"\"\"\n",
     "    tab est un tableau d'entiers, dont les éléments sont 0 ou 1,\n",
@@ -739,10 +818,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1\n",
+    "def recherche(a, tab):\n",
+    "    recurrence = 0\n",
+    "    for i in tab:\n",
+    "        if i == a:\n",
+    "            recurrence += 1\n",
+    "    return recurrence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def rendu_monnaie(somme_due, somme_versee):\n",
+    "    pieces = [1, 2, 5, 10, 20, 50, 100, 200]\n",
+    "    rendu = []\n",
+    "    a_rendre = somme_versee - somme_due\n",
+    "    i = len(pieces) - 1\n",
+    "    while a_rendre != 0:\n",
+    "        if pieces[i] <= a_rendre :\n",
+    "            rendu.append(pieces[i])\n",
+    "            a_rendre -= pieces[i]\n",
+    "        else :\n",
+    "            i -= 1\n",
+    "    return rendu"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°14 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def recherche(elt, tab):\n",
+    "    assert elt == int(elt), \"elt doit être un entier\"\n",
+    "    if elt in tab:\n",
+    "        indice =[i for i in range(len(tab)) if tab[i] == elt]\n",
+    "        return indice[0]\n",
+    "    else:\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def insere(a, tab):\n",
+    "    \"\"\" InsÃ¨re l'Ã©lÃ©ment a (int) dans le tableau tab (list)\n",
+    "    triÃ© par ordre croissant Ã  sa place et renvoie le\n",
+    "    nouveau tableau. \"\"\"\n",
+    "    l = list(tab)\n",
+    "    l.append(a)\n",
+    "    i = len(l) - 2\n",
+    "    while i >= 0 and a < tab[i] : \n",
+    "        l[i+1] = l[i]\n",
+    "        l[i] = a\n",
+    "        i = i - 1\n",
+    "    return l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insere(1, [2, 3, 4])\n"
+   ]
   }
  ],
  "metadata": {
