modif Exercice_pratique

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -18,9 +18,11 @@
     "#1\n",
     "def verifie(tab:list):\n",
     "    '''\n",
-    "    • Paramètre :\n",
+    "    • Définition :\n",
+    "    - Prend un tableau et vérifie si ce dernier est trié (True) ou non (False)\n",
+    "    • Précondition :\n",
     "    - tab : un tableau de valeurs numériques non vide\n",
-    "    • Renvoie :\n",
+    "    • Postcondition :\n",
     "    - True si ce tableau est trié dans l’ordre croissant, False sinon\n",
     "    • Exemples :\n",
     "    - verifie([0, 5, 8, 8, 9])\n",
@@ -84,10 +86,12 @@
     "#1\n",
     "def indices_maxi(tab:list):\n",
     "    '''\n",
-    "    • Paramètre :\n",
+    "    • Définition :\n",
+    "    - Prend un tableau en entrée et renvoie un tuple de l'élément maxi présent dans tab ainsi que les indices auxquels il apparait\n",
+    "    • Précondition :\n",
     "    - tab : une liste tab non vide de nombres entiers\n",
-    "    • Renvoie :\n",
-    "    - Un couple donnant d’une part le plus grand élément de cette liste et d’autre part la liste des indices de la liste tab où apparaît ce plus grand élément\n",
+    "    • Postcondition :\n",
+    "    - Un tuple donnant d’une part le plus grand élément de cette liste et d’autre part la liste des indices de la liste tab où apparaît ce plus grand élément\n",
     "    • Exemple :\n",
     "    - indices_maxi([1, 5, 6, 9, 1, 2, 3, 7, 9, 8])\n",
     "    > (9, [3, 8])\n",
@@ -141,11 +145,13 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def moyenne(liste):\n",
+    "def moyenne(liste:list):\n",
     "    '''\n",
-    "    • Paramètre :\n",
+    "    • Définition :\n",
+    "    - Prend une liste de tuples, en additionne les valeurs puis les divises par le total des coefficient pour en renvoyer la moyenne\n",
+    "    • Précondition :\n",
     "    - liste : une liste non vide de tuples à deux éléments de la forme (valeur, coefficient) où valeur et coefficient sont des nombres positifs ou nuls\n",
-    "    • Renvoie :\n",
+    "    • Postcondition :\n",
     "    - None si la somme des coefficients est nulle, la moyenne des valeurs affectées de leur coefficient sous forme de flottant sinon\n",
     "    • Exemples :\n",
     "    - moyenne([(8, 2), (12, 0), (13.5, 1), (5, 0.5)])\n",
@@ -226,11 +232,13 @@
    "outputs": [],
    "source": [
     "#1 \n",
-    "def a_doublon(liste):\n",
+    "def a_doublon(liste:list):\n",
     "    '''\n",
-    "    • Paramètre :\n",
+    "    • Définition :\n",
+    "    - Prend en entrée une liste et vérifie si cette dernière possède deux éléments identiques (True) ou non (False)\n",
+    "    • Précondition :\n",
     "    - liste : une liste triée de nombres\n",
-    "    • Renvoie :\n",
+    "    • Postcondition :\n",
     "    - True si la liste contient au moins deux nombres identiques, False sinon\n",
     "    • Exemple :\n",
     "    - a_doublon([1, 2, 4, 6, 6])\n",
@@ -238,6 +246,9 @@
     "    '''\n",
     "    assert liste == list(liste), \"Liste doit être une list Python\"\n",
     "    assert len(liste) != 0, \"La liste ne doit pas être vide\"\n",
+    "    triee = list(liste)\n",
+    "    triee.sort()\n",
+    "    assert liste == triee, \"La liste doit être triée par ordre croissant\"\n",
     "    doublon = False\n",
     "    for i in range(len(liste)-1):\n",
     "        if liste[i] == liste[i+1]:\n",
@@ -304,11 +315,13 @@
     "#1\n",
     "from random import randint\n",
     "\n",
-    "def lancer(n):\n",
+    "def lancer(n:int):\n",
     "    '''\n",
-    "    • Paramètre :\n",
+    "    • Définition :\n",
+    "    - Prend un entier correspondant au nombre de fois ou on lance un dé, renvoie ensuite une liste regrouppant les résultats des lancés (compris entre 1 et 6)\n",
+    "    • Précondition :\n",
     "    - n : un entier positif\n",
-    "    • Renvoie :\n",
+    "    • Postcondition :\n",
     "    - Un tableau de type list de n entiers obtenus aléatoirement entre 1 et 6 (1 et 6 inclus) \n",
     "    • Exemple :\n",
     "    - lancer(5)\n",
@@ -320,11 +333,13 @@
     "        resultat.append(randint(1, 6))\n",
     "    return resultat\n",
     "\n",
-    "def paire_6(tab):\n",
+    "def paire_6(tab:list):\n",
     "    '''\n",
-    "    • Paramètre :\n",
+    "    • Définition :\n",
+    "    - Prend en entrée une liste dont les éléménts sont compris entre 1 et 6 puis renvoie si elle contient plus d'un 6 (True) ou non (False)\n",
+    "    • Précondition :\n",
     "    - tab : un tableau de type list de n entiers entre 1 et 6\n",
-    "    • Renvoie :\n",
+    "    • Postcondition :\n",
     "    -  True si le nombre de 6 est supérieur ou égal à 2, False sinon\n",
     "    • Exemple :\n",
     "    - paire_6([5, 6, 6, 2, 2])\n",
@@ -403,7 +418,25 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def recherche(tab, n):\n",
+    "def recherche(tab:list, n:int):\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée un tableau et vérifie si il contient l'élémént n (True) ou non (False)\n",
+    "    • Préconditions :\n",
+    "    - tab : un tableau non vide de type list\n",
+    "    - n : un entier\n",
+    "    • Postconditions :\n",
+    "    - Si n présent dans tab : l'indice de la dernière occurrence de n dans tab\n",
+    "    - Si n n'est pas présent dans tab : la fonction renvoie la longueur de tab\n",
+    "    • Exemples :\n",
+    "    - recherche([2, 3, 5, 2, 4], 2)\n",
+    "    > 3\n",
+    "    - recherche([5, 3], 1)\n",
+    "    > 2\n",
+    "    '''\n",
+    "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    assert n == int(n), \"n doit être un entier\"\n",
     "    indice_max = 0\n",
     "    if n in tab:\n",
     "        for i in range(len(tab)):\n",
@@ -454,7 +487,19 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def fusion(tab1, tab2):\n",
+    "def fusion(tab1:list, tab2:list):\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée deux tableaux puis les combine et les tries\n",
+    "    • Préconditions :\n",
+    "    - tab1 : un tableau non vide de type list\n",
+    "    - tab2 : un second tableau non vide de type list\n",
+    "    • Postcondition :\n",
+    "    - Un tableau trié dans l’ordre croissant et contenant l’ensemble des valeurs de tab1 et tab2\n",
+    "    • Exemple :\n",
+    "    - fusion([3, 5], [2, 5])\n",
+    "    > [2, 3, 5, 5]\n",
+    "    '''\n",
     "    fusion = []\n",
     "    for i in tab1:\n",
     "        fusion.append(i)\n",
@@ -502,7 +547,18 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def max_dico(dico):\n",
+    "def max_dico(dico:dict):\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée un dictionnaire d'utilisateurs avec leur nombre de like et renvoie un tuple de l'utilisateur ayant le maxiumum de like\n",
+    "    • Précondition :\n",
+    "    - dico : un dictionnaire non vide dont les clés sont des chaînes de caractères et les valeurs associées sont des entiers positifs ou nuls\n",
+    "    • Postcondition :\n",
+    "    - Un tuple de la clé du dictionnaire associée à la valeur maximale ainsi que cette dernière\n",
+    "    • Exemple :\n",
+    "    - max_dico({'Bob': 102, 'Ada': 201, 'Alice': 103, 'Tim': 50})\n",
+    "    > ('Ada', 201)\n",
+    "    '''\n",
     "    like_max = 0\n",
     "    for i in dico:\n",
     "        if dico[i] >= like_max:\n",
@@ -576,7 +632,21 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def multiplication(n1, n2):\n",
+    "def multiplication(n1:int, n2:int):\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée deux nombres entiers n1 et n2 et les multiplie sans \"*\"\n",
+    "    • Préconditions :\n",
+    "    - n1 : un nombre entier relatif\n",
+    "    - n2 : un second nombre entier relatif\n",
+    "    • Postcondition :\n",
+    "    - Un entier produit de la multiplication de n1 et n2\n",
+    "    • Exemple :\n",
+    "    -  multiplication(3, 5)\n",
+    "    > 15\n",
+    "    '''\n",
+    "    assert n1 == int(n1), \"n1 doit être un nombre entier relatif\"\n",
+    "    assert n2 == int(n2), \"n2 doit être un nombre entier relatif\"\n",
     "    total = 0\n",
     "\n",
     "    if n1 == 0 or n2 == 0:\n",
