avancée Exercice_pratique

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -854,7 +854,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1\n"
+    "#1\n",
+    "class ABR:\n",
+    "    def __init__(self, g0, v0, d0):\n",
+    "        self.gauche = g0\n",
+    "        self.cle = v0\n",
+    "        self.droit = d0\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        if self is None:\n",
+    "            return ''\n",
+    "        else:\n",
+    "            return '(' + (self.gauche).__repr__() + ',' + str(self.cle) + ',' +(self.droit).__repr__() + ')'\n",
+    "\n",
+    "n0 = ABR(None, 0, None)\n",
+    "n3 = ABR(None, 3, None)\n",
+    "n2 = ABR(None, 2, n3)\n",
+    "abr1 = ABR(n0, 1, n2)\n",
+    "\n",
+    "\n",
+    "def ajoute(cle, a):\n",
+    "    if a is None:\n",
+    "        return ABR(None, cle, None)\n",
+    "    elif cle == a.cle:\n",
+    "        return a\n",
+    "    elif cle < a.cle:\n",
+    "        return ABR(ajoute(cle, a.gauche), a.cle, a.droit)\n",
+    "    else:\n",
+    "        return ABR(a.gauche, a.cle, ajoute(cle, a.droit))"
    ]
   },
   {
@@ -948,43 +975,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "#2\n",
     "def insere(a, tab):\n",
-    "    \"\"\" InsÃ¨re l'Ã©lÃ©ment a (int) dans le tableau tab (list)\n",
-    "    triÃ© par ordre croissant Ã  sa place et renvoie le\n",
-    "    nouveau tableau. \"\"\"\n",
     "    l = list(tab)\n",
     "    l.append(a)\n",
-    "    i = len(l) - 2\n",
-    "    while i >= 0 and a < tab[i] : \n",
+    "    i = len(tab) - 1\n",
+    "    while i >= 0 and a < tab[i]:\n",
     "        l[i+1] = l[i]\n",
     "        l[i] = a\n",
-    "        i = i - 1\n",
+    "        i -= 1\n",
     "    return l"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "insere(1, [2, 3, 4])\n"
+    "# Sujet n°15 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
    ]
   }
  ],
