modif Exercice_pratique

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def verifie(tab:list):\n",
+    "def verifie(tab:list)->bool:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend un tableau et vérifie si ce dernier est trié (True) ou non (False)\n",
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def indices_maxi(tab:list):\n",
+    "def indices_maxi(tab:list)->tuple:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend un tableau en entrée et renvoie un tuple de l'élément maxi présent dans tab ainsi que les indices auxquels il apparait\n",
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def moyenne(liste:list):\n",
+    "def moyenne(liste:list)->float:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend une liste de tuples, en additionne les valeurs puis les divises par le total des coefficient pour en renvoyer la moyenne\n",
@@ -232,7 +232,7 @@
    "outputs": [],
    "source": [
     "#1 \n",
-    "def a_doublon(liste:list):\n",
+    "def a_doublon(liste:list)->bool:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend en entrée une liste et vérifie si cette dernière possède deux éléments identiques (True) ou non (False)\n",
@@ -315,7 +315,7 @@
     "#1\n",
     "from random import randint\n",
     "\n",
-    "def lancer(n:int):\n",
+    "def lancer(n:int)->list:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend un entier correspondant au nombre de fois ou on lance un dé, renvoie ensuite une liste regrouppant les résultats des lancés (compris entre 1 et 6)\n",
@@ -333,7 +333,7 @@
     "        resultat.append(randint(1, 6))\n",
     "    return resultat\n",
     "\n",
-    "def paire_6(tab:list):\n",
+    "def paire_6(tab:list)->bool:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend en entrée une liste dont les éléménts sont compris entre 1 et 6 puis renvoie si elle contient plus d'un 6 (True) ou non (False)\n",
@@ -418,7 +418,7 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def recherche(tab:list, n:int):\n",
+    "def recherche(tab:list, n:int)->int:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend en entrée un tableau et vérifie si il contient l'élémént n (True) ou non (False)\n",
@@ -455,6 +455,7 @@
    "source": [
     "#2\n",
     "from math import sqrt   # import de la fonction racine carrée\n",
+    "\n",
     "def distance(point1, point2):\n",
     "    \"\"\" Calcule et renvoie la distance entre deux points. \"\"\"\n",
     "    return sqrt((point1[0]-point2[0])**2 + (point1[1]-point2[1])**2)\n",
@@ -487,7 +488,7 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def fusion(tab1:list, tab2:list):\n",
+    "def fusion(tab1:list, tab2:list)->list:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend en entrée deux tableaux puis les combine et les tries\n",
@@ -547,7 +548,7 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def max_dico(dico:dict):\n",
+    "def max_dico(dico:dict)->tuple:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend en entrée un dictionnaire d'utilisateurs avec leur nombre de like et renvoie un tuple de l'utilisateur ayant le maxiumum de like\n",
@@ -632,7 +633,7 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def multiplication(n1:int, n2:int):\n",
+    "def multiplication(n1:int, n2:int)->int:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend en entrée deux nombres entiers n1 et n2 et les multiplie sans \"*\"\n",
@@ -700,12 +701,24 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def maxliste(liste):\n",
-    "    maxliste = liste[0]\n",
-    "    for i in liste:\n",
-    "        if i > maxliste:\n",
-    "            maxliste = i\n",
-    "    return maxliste"
+    "def maxliste(tab:list)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée une liste et en renvoie son élément maximum\n",
+    "    • Précondition :\n",
+    "    - tab : un tableau non vide de nombres de type list\n",
+    "    • Postcondition :\n",
+    "    - Le plus grand élément de ce tableau\n",
+    "    • Exemple :\n",
+    "    - maxliste([98, 12, 104, 23, 131, 9])\n",
+    "    > 131\n",
+    "    '''\n",
+    "    assert \n",
+    "    maxtab = tab[0]\n",
+    "    for i in tab:\n",
+    "        if i > maxtab:\n",
+    "            maxtab = i\n",
+    "    return maxtab"
    ]
   },
   {
@@ -714,8 +727,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ou\n",
-    "def maxliste(liste):\n",
+    "#ou par compréhension\n",
+    "def maxliste(liste:list)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée une liste et en renvoie son élément maximum par compréhension\n",
+    "    • Précondition :\n",
+    "    - tab : un tableau non vide de nombres de type list\n",
+    "    • Postcondition :\n",
+    "    - Le plus grand élément de ce tableau\n",
+    "    • Exemple :\n",
+    "    - maxliste([98, 12, 104, 23, 131, 9])\n",
+    "    > 131\n",
+    "    '''\n",
     "    maxliste = liste[0]\n",
     "    maxliste = [i for i in liste if i > maxliste]\n",
     "    return maxliste[-1]"
@@ -785,13 +809,18 @@
    "outputs": [],
    "source": [
     "#1 \n",
-    "def convertir(tab):\n",
-    "    \"\"\"\n",
-    "    tab est un tableau d'entiers, dont les éléments sont 0 ou 1,\n",
-    "    et représentant un entier écrit en binaire.\n",
-    "    Renvoie l'écriture décimale de l'entier positif dont la\n",
-    "    représentation binaire est donnée par le tableau tab\n",
-    "    \"\"\"\n",
+    "def convertir(tab:list)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée un tableau d'entiers dont les éléments sont 0 ou 1 et renvoie l'écriture décimale de cet entier positif\n",
+    "    • Précondition :\n",
+    "    - tab : un tableau d'entiers dont les éléments sont 0 ou 1\n",
+    "    • Postcondition :\n",
+    "    - L'écriture décimale de cette liste binaire\n",
+    "    • Exemple :\n",
+    "    - convertir([1, 0, 1, 0, 0, 1, 1])\n",
+    "    > 83\n",
+    "    '''\n",
     "    nombre = 0\n",
     "    taille = len(tab)\n",
     "    for i in range(taille):\n",
@@ -802,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1068,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+    "hash": "6823027d7e29b41a4e6f28161e95b4dfbe0e8b9a6a7278f50ef7cf75c6459dbe"
    }
   }
  },
