assert Exercice_pratique

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -501,6 +501,8 @@
     "    - fusion([3, 5], [2, 5])\n",
     "    > [2, 3, 5, 5]\n",
     "    '''\n",
+    "    assert tab1 == list(tab1) and tab2 == list(tab2), \"Tab1 et Tab2 doivent être des list Python\"\n",
+    "    assert len(tab1) != 0 and len(tab2) != 0, \"Tab1 et Tab2 ne doivent pas être vides\"\n",
     "    fusion = []\n",
     "    for i in tab1:\n",
     "        fusion.append(i)\n",
