Exercice_pratique au propre

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -30,8 +30,10 @@
     "    - verifie([8, 12, 4])\n",
     "    > False\n",
     "    '''\n",
+    "\n",
     "    assert tab == list(tab), \"tab doit être un tableau sous la form d'une list Python\"\n",
     "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    \n",
     "    trier = True\n",
     "    for i in range(len(tab)-1):\n",
     "        if tab[i] <= tab[i+1]:\n",
@@ -96,8 +98,10 @@
     "    - indices_maxi([1, 5, 6, 9, 1, 2, 3, 7, 9, 8])\n",
     "    > (9, [3, 8])\n",
     "    '''\n",
+    "\n",
     "    assert tab == list(tab), \"tab doit être une list Python\"\n",
     "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    \n",
     "    indices = []\n",
     "    maxi = tab[0]\n",
     "    for i in range(len(tab)):\n",
@@ -159,8 +163,10 @@
     "    - moyenne([(3, 0), (5, 0)])\n",
     "    > None\n",
     "    '''\n",
+    "\n",
     "    assert liste == list(liste), \"Liste doit être une list Python\"\n",
     "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    \n",
     "    valeur = 0\n",
     "    coeff = 0\n",
     "    total = 0\n",
@@ -244,8 +250,10 @@
     "    - a_doublon([1, 2, 4, 6, 6])\n",
     "    > True\n",
     "    '''\n",
+    "\n",
     "    assert liste == list(liste), \"Liste doit être une list Python\"\n",
     "    assert len(liste) != 0, \"La liste ne doit pas être vide\"\n",
+    "    \n",
     "    triee = list(liste)\n",
     "    triee.sort()\n",
     "    assert liste == triee, \"La liste doit être triée par ordre croissant\"\n",
@@ -327,7 +335,9 @@
     "    - lancer(5)\n",
     "    > [5, 6, 6, 2, 2]\n",
     "    '''\n",
+    "\n",
     "    assert n == int(n), \"n doit être un nombre entier\"\n",
+    "\n",
     "    resultat = []\n",
     "    for i in range(n):\n",
     "        resultat.append(randint(1, 6))\n",
@@ -345,8 +355,10 @@
     "    - paire_6([5, 6, 6, 2, 2])\n",
     "    > True\n",
     "    '''\n",
+    "\n",
     "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
     "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    \n",
     "    total_6 = 0\n",
     "    for i in tab:\n",
     "        if i == 6:\n",
@@ -434,9 +446,11 @@
     "    - recherche([5, 3], 1)\n",
     "    > 2\n",
     "    '''\n",
+    "\n",
     "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
     "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
     "    assert n == int(n), \"n doit être un entier\"\n",
+    "    \n",
     "    indice_max = 0\n",
     "    if n in tab:\n",
     "        for i in range(len(tab)):\n",
@@ -501,8 +515,10 @@
     "    - fusion([3, 5], [2, 5])\n",
     "    > [2, 3, 5, 5]\n",
     "    '''\n",
+    "\n",
     "    assert tab1 == list(tab1) and tab2 == list(tab2), \"Tab1 et Tab2 doivent être des list Python\"\n",
     "    assert len(tab1) != 0 and len(tab2) != 0, \"Tab1 et Tab2 ne doivent pas être vides\"\n",
+    "    \n",
     "    fusion = []\n",
     "    for i in tab1:\n",
     "        fusion.append(i)\n",
@@ -648,21 +664,19 @@
     "    -  multiplication(3, 5)\n",
     "    > 15\n",
     "    '''\n",
+    "\n",
     "    assert n1 == int(n1), \"n1 doit être un nombre entier relatif\"\n",
     "    assert n2 == int(n2), \"n2 doit être un nombre entier relatif\"\n",
-    "    total = 0\n",
     "\n",
+    "    total = 0\n",
     "    if n1 == 0 or n2 == 0:\n",
     "        total = 0\n",
-    "\n",
     "    elif n1 > 0 or n2 > 0:\n",
     "        for i in range(max(n1,n2)):\n",
     "            total += min(n1,n2)\n",
-    "    \n",
     "    else:\n",
     "        for i in range(-n1):\n",
     "            total -= n2\n",
-    "    \n",
     "    return total"
    ]
   },
@@ -715,7 +729,10 @@
     "    - maxliste([98, 12, 104, 23, 131, 9])\n",
     "    > 131\n",
     "    '''\n",
-    "    assert \n",
+    "\n",
+    "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    \n",
     "    maxtab = tab[0]\n",
     "    for i in tab:\n",
     "        if i > maxtab:\n",
@@ -730,7 +747,7 @@
    "outputs": [],
    "source": [
     "#ou par compréhension\n",
-    "def maxliste(liste:list)->int:\n",
+    "def maxliste(tab:list)->int:\n",
     "    '''\n",
     "    • Définition :\n",
     "    - Prend en entrée une liste et en renvoie son élément maximum par compréhension\n",
@@ -742,8 +759,10 @@
     "    - maxliste([98, 12, 104, 23, 131, 9])\n",
     "    > 131\n",
     "    '''\n",
-    "    maxliste = liste[0]\n",
-    "    maxliste = [i for i in liste if i > maxliste]\n",
+    "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    maxliste = tab[0]\n",
+    "    maxliste = [i for i in tab if i > maxliste]\n",
     "    return maxliste[-1]"
    ]
   },
@@ -806,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,6 +842,13 @@
     "    - convertir([1, 0, 1, 0, 0, 1, 1])\n",
     "    > 83\n",
     "    '''\n",
+    "\n",
+    "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    for i in tab:\n",
+    "        if i != 0 and i != 1:\n",
+    "            raise Execption(\"La liste ne doit contenir que des 0 et des 1\")\n",
+    "            \n",
     "    nombre = 0\n",
     "    taille = len(tab)\n",
     "    for i in range(taille):\n",
@@ -839,6 +865,24 @@
    "source": [
     "#ou en récursif\n",
     "def convertir(tab):\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée un tableau d'entiers dont les éléments sont 0 ou 1 et renvoie l'écriture décimale de cet entier positif de façon récursive\n",
+    "    • Précondition :\n",
+    "    - tab : un tableau d'entiers dont les éléments sont 0 ou 1\n",
+    "    • Postcondition :\n",
+    "    - L'écriture décimale de cette liste binaire\n",
+    "    • Exemple :\n",
+    "    - convertir([1, 0, 1, 0, 0, 1, 1])\n",
+    "    > 83\n",
+    "    '''\n",
+    "    \n",
+    "    assert tab == list(tab), \"Liste doit être une list Python\"\n",
+    "    assert len(tab) != 0, \"La liste ne doit pas être vide\"\n",
+    "    for i in tab:\n",
+    "        if i != 0 and i != 1:\n",
+    "            raise Execption(\"La liste ne doit contenir que des 0 et des 1\")\n",
+    "            \n",
     "    if len(tab) == 1:\n",
     "        if tab[0] == 1:\n",
     "            return 2**(len(tab)-1)\n",
@@ -904,7 +948,21 @@
     "abr1 = ABR(n0, 1, n2)\n",
     "\n",
     "\n",
-    "def ajoute(cle, a):\n",
+    "def ajoute(cle:int, a):\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée une clé et un arbre binaire de recherche et renvoie un arbre binaire de recherche dans lequel cle a été insérée\n",
+    "    • Préconditions :\n",
+    "    - cle : une clé de type int\n",
+    "    - a : un arbre binaire de recherche\n",
+    "    • Postcondition :\n",
+    "    - Un arbre binaire de recherche dans lequel cle a été insérée et si cle est déjà présente dans a, la fonction renvoie l’arbre a inchangé\n",
+    "    • Exemple :\n",
+    "    - a = ajoute(4, abr1)\n",
+    "    > ((None,0,None),1,(None,2,(None,3,(None,4,None))))\n",
+    "    '''\n",
+    "    assert cle == int(cle), \"cle doit être un nombre entier\"\n",
+    "    \n",
     "    if a is None:\n",
     "        return ABR(None, cle, None)\n",
     "    elif cle == a.cle:\n",
@@ -951,7 +1009,23 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def recherche(a, tab):\n",
+    "def recherche(a, tab:list)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée une varibale numérique a et un tableau et renvoie le nombre de fois que a apparaît dans tab\n",
+    "    • Préconditions :\n",
+    "    - a : une variable numérique float/int\n",
+    "    - tab : un tableau de type list\n",
+    "    • Postcondition :\n",
+    "    - Le nombre d'occurrences de a dans tab.\n",
+    "    • Exemple :\n",
+    "    - recherche(5, [-2, 5, 3, 5, 4, 5])\n",
+    "    > 3\n",
+    "    '''\n",
+    "    \n",
+    "    assert a == int(a) or a == float(a), \"a doit être une variable numérique de type float ou int\"\n",
+    "    assert tab == list(tab), \"tab doit être une list Python\"\n",
+    "\n",
     "    recurrence = 0\n",
     "    for i in tab:\n",
     "        if i == a:\n",
@@ -995,8 +1069,23 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def recherche(elt, tab):\n",
+    "def recherche(elt:int, tab:list)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en entrée une valeur numérique elt et un tableau tab et renvoie la première occurence de elt dans tab ou -1 si elt n'est pas dans tab\n",
+    "    • Préconditions :\n",
+    "    - elt : une valeur numérique de type int\n",
+    "    - tab : un tableau de type list\n",
+    "    • Postcondition :\n",
+    "    - La première occurrence de elt dans tab ou -1 si elt n'est pas dans tab\n",
+    "    • Exemple :\n",
+    "    - recherche(1, [10, 12, 1, 56])\n",
+    "    > 2\n",
+    "    '''\n",
+    "\n",
     "    assert elt == int(elt), \"elt doit être un entier\"\n",
+    "    assert tab == list(tab), \"tab doit être une list Python\"\n",
+    "\n",
     "    if elt in tab:\n",
     "        indice =[i for i in range(len(tab)) if tab[i] == elt]\n",
     "        return indice[0]\n",
